Bug 78724 - [SNB/BDW Regression]igt/gem_lut_handle was killed
Summary: [SNB/BDW Regression]igt/gem_lut_handle was killed
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 77754 78024 78280
  Show dependency treegraph
 
Reported: 2014-05-15 06:29 UTC by Guo Jinxian
Modified: 2016-02-15 13:48 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, SNB
i915 features:


Attachments
dmesg (82.17 KB, text/plain)
2014-05-15 06:29 UTC, Guo Jinxian
no flags Details
Retire requests during execbuffer. (1.91 KB, patch)
2014-05-15 09:42 UTC, Chris Wilson
no flags Details | Splinter Review
dmesg (77.30 KB, text/plain)
2014-05-16 08:44 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-05-15 06:29:02 UTC
Created attachment 99058 [details]
dmesg

==System Environment==
--------------------------
Regression: Yes. 
And here had another before Bug 78055

Non-working platforms: SNB BDW

==kernel==
--------------------------
-nightly: c74cad3c2599b47438b168ca5629fbb00ab63f95 (fails)
-queued: 229b0489aa75a8c51d2f2e124329d3ac326f326d (fails)
    Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
    Date:   Wed May 14 17:02:17 2014 +0300

    drm/i915: add null render states for gen6, gen7 and gen8

    These are generated with intel-gpu-tools/tools/null_state_gen

    v2: Don't use header file for states (Daniel Vetter)

    v3: Proper URB state size for gen8/GT3 (Damien Lespiau)

    Tested-by: Kristen Carlson Accardi <kristen@linux.intel.com> (v1)
    Tested-by: Oscar Mateo <oscar.mateo@intel.com> (v2)
    Acked-by: Damien Lespiau <damien.lespiau@intel.com>
    Signed-off-by: Mika Kuoppala <mika.kuoppala@intel.com>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>


-fixes: 05adaf1f101f25f40f12c29403e6488f0e45f6b6 (works)
    Author: Jani Nikula <jani.nikula@intel.com>
    Date:   Fri May 9 14:52:34 2014 +0300

    drm/i915/vlv: reset VLV media force wake request register

    Media force wake get hangs the machine when the system is booted without
    displays attached. The assumption is that (at least some versions of)
    the firmware has skipped some initialization in that case.

    Empirical evidence suggests we need to reset the media force wake
    request register in addition to the render one to avoid hangs.

    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75895
    Reported-by: Imre Deak <imre.deak@intel.com>
    Reported-by: Darren Hart <dvhart@linux.intel.com>
    Tested-by: Darren Hart <dvhart@linux.intel.com>
    Reviewed-by: Mika Kuoppala <mika.kuoppala@intel.com>
    Cc: stable@vger.kernel.org
    Signed-off-by: Jani Nikula <jani.nikula@intel.com>

==Bug detailed description==
-----------------------------
igt/gem_lut_handle was killed

Output:
 ./gem_lut_handle
IGT-Version: 1.6-g351e7d3 (i686) (Linux: 3.15.0-rc3_drm-intel-next-queued_229b04_20140515+ i686)
Killed

==Reproduce steps==
---------------------------- 
1. ./gem_lut_handle
Comment 1 Chris Wilson 2014-05-15 09:42:36 UTC
Created attachment 99078 [details] [review]
Retire requests during execbuffer.
Comment 2 Chris Wilson 2014-05-15 09:44:31 UTC
At least the positive side-effect of not having fixed the OOM issues is that we caught this bug!
Comment 3 Daniel Vetter 2014-05-15 14:17:31 UTC
Needinfo for QA to act ...
Comment 4 Guo Jinxian 2014-05-16 08:44:54 UTC
Created attachment 99145 [details]
dmesg

(In reply to comment #1)
> Created attachment 99078 [details] [review] [review]
> Retire requests during execbuffer.

With the patch, this bug unable to reproduce.
Comment 5 Daniel Vetter 2014-05-16 21:06:30 UTC
commit bf356de5a99a9fae3b5ba0a741dbab003f9f4272
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu May 15 10:41:42 2014 +0100

    drm/i915: Retire requests before creating a new one
Comment 6 Chris Wilson 2014-05-19 06:45:38 UTC
Daniel, you never pushed the patch.
Comment 7 Daniel Vetter 2014-05-19 08:41:58 UTC
Oops
Comment 8 liulei 2014-05-26 04:31:19 UTC
Verified
[root@x-sgb opt]# ./gem_lut_handle
IGT-Version: 1.6-gff3c122 (x86_64) (Linux: 3.15.0-rc3_drm-intel-next-queued_f83d65_20140525+ x86_64)
root@x-bdw:/opt# ./gem_lut_handle
IGT-Version: 1.6-gff3c122 (x86_64) (Linux: 3.15.0-rc3_drm-intel-next-queued_f83d65_20140525+ x86_64)
Comment 9 cprigent 2016-02-15 13:48:45 UTC
So closed


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.